# tree-sitter-bbcode

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bbcode.h  tree-sitter-bbcode.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bbcode/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBBcodeTests/: TreeSitterBBcodeTests.swift
queries/: highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
